Fix last entry alignment in table on portals

--- a/ui/page/creatorMemberships/creatorArea/style.scss
+++ b/ui/page/creatorMemberships/creatorArea/style.scss
@@ -72,7 +72,7 @@
       }
     }
     tbody {
-      tr:not(:last-child) {
+      tr {
         td {
           padding: 0.8rem;
           border-bottom: 2px solid rgba(var(--color-primary-static), 0.4) !important;
